--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="normalize.css">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="./normalize.css">
+    <link rel="stylesheet" href="./style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -47,7 +47,7 @@
 
 
 
-    <script src="/app.js"></script>
+    <script src="./app.js"></script>
 </body>
 
 </html>
