--- a/index.html
+++ b/index.html
@@ -22,9 +22,14 @@
                 <input type="checkbox" id="simbolos">
                 <label for="simbolos">Simbolos</label>
             </div>
+            <div class="app-body">
+                <div class="app-opciones">
+                    <input type="checkbox" id="numeros" checked >
+                    <label for="numeros">Numeros</label>
+                </div>
             <div class="app-opciones">
-                <input type="checkbox" id="letras">
-                <label for="letras">Letras</label>
+                <input type="checkbox" id="minusculas">
+                <label for="minusculas">Minusculas</label>
             </div>
             <div class="app-opciones">
                 <input type="checkbox" id="mayusculas">
@@ -32,11 +37,11 @@
             </div>
             <div class="app-opciones">
                 <label for="largo">Largo</label>
-                <input type="number" id="largo" min="4" max="20">
+                <input type="number" value="4" id="largo" min="4" max="20">
                 
             </div>
             <div class="app-opciones ">
-                <button id="button-generar" type="submit" onclick="" >Generar</button>
+                <button id="button-generar" type="submit"  >Generar</button>
             </div>
         </div>
 
